--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,4 +8,9 @@ layout: default
     <div class="about__content">
         {{ content }}
     </div>
+    
+    <h1 class="about__title">My friends:</h1>
+    <div class="about__content">
+        {{ content }}
+    </div>    
 </div>
