--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -11,5 +11,8 @@ layout: default
     
     <h1 class="about__title">My Friends:</h1>
     <a href="http://dlyang.me/" target="_blank">LanternD</a>
+    
     <a href="http://www.lieking.com/" target="_blank">时光笔记</a>
+    
+    <a href="https://www.ipz.me/" target="_blank">影乐</a>
 </div>
