--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -10,8 +10,8 @@ layout: default
     </div>
     
     <h1 class="about__title">My Friends:</h1>
-    <a href="http://dlyang.me/" target="_blank">LanternD</a><br><br><br>    
-    <a href="http://www.lieking.com/" target="_blank">时光笔记</a><br><br><br> 
-    <a href="https://www.ipz.me/" target="_blank">影乐</a><br><br><br>
-    <a href="https://leonax.net/" target="_blank">Sumhat</a><br><br><br>
+    <h2><a href="http://dlyang.me/" target="_blank">LanternD</a></h2>    
+    <h2><a href="http://www.lieking.com/" target="_blank">时光笔记</a></h2> 
+    <h2><a href="https://www.ipz.me/" target="_blank">影乐</a></h2>
+    <h2><a href="https://leonax.net/" target="_blank">Sumhat</a></h2>
 </div>
