--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -10,6 +10,8 @@ layout: default
     </div>
     
     <h1 class="about__title">My Friends:</h1>
+    <p><a href="http://dlyang.me/" target="_blank">LanternD</a></p>
+    <p><a href="http://www.lieking.com/" target="_blank">影乐</a></p>
     <table width="525">
 <tbody>
 <tr>
