--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -12,28 +12,16 @@ layout: default
     <h1 class="about__title">My Friends:</h1>
     <p><a href="http://dlyang.me/" target="_blank">LanternD</a></p>
     <p><a href="http://www.lieking.com/" target="_blank">影乐</a></p>
-    <table width="525">
+    
+    <table border="1">
+<tr><td><a href="http://dlyang.me/" target="_blank">LanternD</a></td><td><a href="http://www.lieking.com/" target="_blank">时光笔记</a></td></tr>
+<tr><td><a href="https://www.ipz.me/" target="_blank">影乐</a></td><td><a href="https://leonax.net/" target="_blank">Sumhat</a></td></tr>
+</table>
+    
+    
+    
+<table width="525">
 <tbody>
-<tr>
-<td width="80">LanternD</td>
-<td width="52">美国</td>
-<td width="209"><a href="http://dlyang.me/" target="_blank">dlyang.me</a></td>
-</tr>
-<tr>
-<td>时光笔记</td>
-<td>宜昌</td>
-<td><a href="http://www.lieking.com/" target="_blank">www.lieking.com</a></td>
-</tr>
-<tr>
-<td>影乐</td>
-<td>山东</td>
-<td><a href="https://www.ipz.me/" target="_blank">www.ipz.me</a></td>
-</tr>
-<tr>
-<td>Sumhat</td>
-<td>瑞士</td>
-<td><a href="https://leonax.net/" target="_blank">leonax.net</a></td>
-</tr>
 <tr>
 <td>Shrek</td>
 <td>上海</td>
