--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -13,7 +13,7 @@ layout: default
     <p><a href="http://dlyang.me/" target="_blank">LanternD</a></p>
     <p><a href="http://www.lieking.com/" target="_blank">影乐</a></p>
     
-    <table border="50">
+    <table width="500" border="50" height="50">
 <tr><td><a href="http://dlyang.me/" target="_blank">LanternD</a></td><td><a href="http://www.lieking.com/" target="_blank">时光笔记</a></td></tr>
 <tr><td><a href="https://www.ipz.me/" target="_blank">影乐</a></td><td><a href="https://leonax.net/" target="_blank">Sumhat</a></td></tr>
 </table>
