--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -9,269 +9,99 @@ layout: default
         {{ content }}
     </div>
     
-    <h1 class="about__title">My Friends:</h1>
-    <p><a href="http://dlyang.me/" target="_blank">LanternD</a></p>
-    <p><a href="http://www.lieking.com/" target="_blank">影乐</a></p>
-    
-    <table width="500" border="50" height="50">
-<tr><td><a href="http://dlyang.me/" target="_blank">LanternD</a></td><td><a href="http://www.lieking.com/" target="_blank">时光笔记</a></td></tr>
-<tr><td><a href="https://www.ipz.me/" target="_blank">影乐</a></td><td><a href="https://leonax.net/" target="_blank">Sumhat</a></td></tr>
+    <h1 class="about__title">My Friends:</h1>    
+
+<table width="200" border="50" height="50">
+<tr>
+    <td><a href="http://dlyang.me/" target="_blank">LanternD</a></td>
+    <td><a href="http://www.lieking.com/" target="_blank">时光笔记</a></td>
+    <td><a href="https://www.ipz.me/" target="_blank">影乐</a></td><td>
+</tr>
+<tr>
+    <td><a href="https://leonax.net/" target="_blank">Sumhat</a></td>
+    <td><a href="http://muguayuan.com/" target="_blank">Shrek</a></td>
+    <td><a href="http://www.mhcf.net/" target="_blank">梦幻辰风</a></td>   
+</tr>
+<tr>
+    <td><a href="http://laob.me/" target="_blank">毕扬博客</a></td>
+    <td><a href="http://wakinger.com/" target="_blank">王宜楷</a></td>
+    <td><a href="http://puertime.com/" target="_blank">普洱时间</a></td>   
+</tr>
+<tr>
+    <td><a href="http://fangshi.org/" target="_blank">老方</a></td>
+    <td><a href="http://quluwei.com/" target="_blank">小曲</a></td>
+    <td><a href="http://www.9doe.com/" target="_blank">九多壹</a></td>   
+</tr>
+<tr>
+    <td><a href="http://www.huangqifu.com/" target="_blank">黄启福</a></td>
+    <td><a href="http://www.yelook.com/" target="_blank">有野出没</a></td>
+    <td><a href="http://hustlzp.com/" target="_blank">刘志鹏</a></td>   
+</tr>
+<tr>
+    <td><a href="http://fatesinger.com/" target="_blank">大发贱志</a></td>
+    <td><a href="http://blog.exbye.com/" target="_blank">浮茗诗舍</a></td>
+    <td><a href="http://zhiqiang.org/blog/" target="_blank">阅微堂</a></td>   
+</tr>
+<tr>
+    <td><a href="http://www.elizen.me/" target="_blank">Elizen</a></td>
+    <td><a href="http://www.lkhweb.com/" target="_blank">过境千帆</a></td>
+    <td><a href="http://houye.xyz/" target="_blank">侯爷</a></td>   
+</tr>
+<tr>
+    <td><a href="http://www.anxinblog.org/" target="_blank">安详的心</a></td>
+    <td><a href="http://www.ithmz.com/" target="_blank">从良未遂</a></td>
+    <td><a href="http://ons.me/" target="_blank">西门</a></td>   
+</tr>
+<tr>
+    <td><a href="https://chenghouwen.com/" target="_blank">勺子</a></td>
+    <td><a href="http://imfer.me/" target="_blank">范儿</a></td>
+    <td><a href="http://www.hdgogogo.com/" target="_blank">大路</a></td>   
+</tr>
+<tr>
+    <td><a href="http://imjiayin.com/" target="_blank">JiaYin</a></td>
+    <td><a href="http://www.misray.com/" target="_blank">Ray</a></td>
+    <td><a href="http://blog.chenchenli.net" target="_blank">第六天天使</a></td>   
+</tr>
+<tr>
+    <td><a href="http://dapengde.com/" target="_blank">大鹏</a></td>
+    <td><a href="http://maguang.net/" target="_blank">马光</a></td>
+    <td><a href="https://tumutanzi.com/" target="_blank">坛子</a></td>   
+</tr>
+<tr>
+    <td><a href="http://jinbo123.com/" target="_blank">佐仔</a></td>
+    <td><a href="https://chinr.net/" target="_blank">忘想</a></td>
+    <td><a href="http://www.lushaojun.com/" target="_blank">阿钧</a></td>   
+</tr>
+<tr>
+    <td><a href="http://cyhour.com/" target="_blank">常阳时光</a></td>
+    <td><a href="http://huangyunying.com/" target="_blank">黄云英</a></td>
+    <td><a href="http://blog.if404.com/" target="_blank">枫叶向风</a></td>   
+</tr>
+<tr>
+    <td><a href="http://blog.cctv.com.im" target="_blank">烟雨</a></td>
+    <td><a href="http://viruschen.com/" target="_blank">virus</a></td>
+    <td><a href="http://fanxihui.com/" target="_blank">Francis</a></td>   
+</tr>
+<tr>
+    <td><a href="http://www.sunyansong.com/" target="_blank">牌巴子</a></td>
+    <td><a href="http://wdk.pw" target="_blank">DK</a></td>
+    <td><a href="http://www.80-go.com/" target="_blank">松鼠男</a></td>   
+</tr>
+<tr>
+    <td><a href="http://yufan.me/" target="_blank">雨帆</a></td>
+    <td><a href="http://fmwei.com/" target="_blank">Fmwei</a></td>
+    <td><a href="http://huiris.com/" target="_blank">Huiris</a></td>   
+</tr>
+<tr>
+    <td><a href="http://www.caibin.me/" target="_blank">希望</a></td>
+    <td><a href="http://xin.im/" target="_blank">寨主</a></td>
+    <td><a href="http://www.yaoranqu.com/" target="_blank">清寒</a></td>   
+</tr>
+<tr>
+    <td><a href="http://www.music4x.com/" target="_blank">老罗</a></td>
+    <td><a href="http://blog.2-1603.com/" target="_blank">康员外</a></td>
+    <td><a href="http://chenfm.com/" target="_blank">逗号</a></td>   
+</tr>
 </table>
-    
-    
-    
-<table width="525">
-<tbody>
-<tr>
-<td>Shrek</td>
-<td>上海</td>
-<td><a href="http://muguayuan.com/" target="_blank">muguayuan.com</a></td>
-</tr>
-<tr>
-<td>梦幻辰风</td>
-<td>新疆</td>
-<td><a href="http://www.mhcf.net/" target="_blank">www.mhcf.net</a></td>
-</tr>
-<tr>
-<td>毕扬博客</td>
-<td>北京</td>
-<td><a href="http://laob.me/" target="_blank">laob.me</a></td>
-</tr>
-<tr>
-<td>王宜楷Labs</td>
-<td>成都</td>
-<td><a href="http://wakinger.com/" target="_blank">wakinger.com</a></td>
-</tr>
-<tr>
-<td>普洱时间</td>
-<td>昆明</td>
-<td><a href="http://puertime.com/" target="_blank">puertime.com</a></td>
-</tr>
-<tr>
-<td>老方</td>
-<td>长沙</td>
-<td><a href="http://fangshi.org/" target="_blank">fangshi.org</a></td>
-</tr>
-<tr>
-<td>小曲</td>
-<td>烟台</td>
-<td><a href="http://quluwei.com/" target="_blank">quluwei.com</a></td>
-</tr>
-<tr>
-<td>九多壹</td>
-<td>赣州</td>
-<td><a href="http://www.9doe.com/" target="_blank">www.9doe.com</a></td>
-</tr>
-<tr>
-<td>黄启福</td>
-<td>合肥</td>
-<td><a href="http://www.huangqifu.com/" target="_blank">www.huangqifu.com</a></td>
-</tr>
-<tr>
-<td>有野出没</td>
-<td>济南</td>
-<td><a href="http://www.yelook.com/" target="_blank">www.yelook.com</a></td>
-</tr>
-<tr>
-<td>刘志鹏</td>
-<td>孝感</td>
-<td><a href="http://hustlzp.com/" target="_blank">hustlzp.com</a></td>
-</tr>
-<tr>
-<td>大发贱志</td>
-<td>哈尔滨</td>
-<td><a href="http://fatesinger.com/" target="_blank">fatesinger.com</a></td>
-</tr>
-<tr>
-<td>浮茗诗舍</td>
-<td>北京</td>
-<td><a href="http://blog.exbye.com/" target="_blank">blog.exbye.com</a></td>
-</tr>
-<tr>
-<td>阅微堂</td>
-<td>北京</td>
-<td><a href="http://zhiqiang.org/blog/" target="_blank">zhiqiang.org/blog</a></td>
-</tr>
-<tr>
-<td>上尉</td>
-<td>北京</td>
-<td><a href="http://www.elizen.me/" target="_blank">www.elizen.me</a></td>
-</tr>
-<tr>
-<td>过境千帆</td>
-<td>北京</td>
-<td><a href="http://www.lkhweb.com/" target="_blank">www.lkhweb.com</a></td>
-</tr>
-<tr>
-<td>侯爷</td>
-<td>杭州</td>
-<td><a href="http://houye.xyz/" target="_blank">houye.xyz</a></td>
-</tr>
-<tr>
-<td>安详的心</td>
-<td>西安</td>
-<td><a href="http://www.anxinblog.org/" target="_blank">www.anxinblog.org</a></td>
-</tr>
-<tr>
-<td>从良未遂</td>
-<td>无锡</td>
-<td><a href="http://www.ithmz.com/" target="_blank">www.ithmz.com</a></td>
-</tr>
-<tr>
-<td>西门</td>
-<td>武汉</td>
-<td><a href="http://ons.me/" target="_blank">ons.me</a></td>
-</tr>
-<tr>
-<td>勺子</td>
-<td>深圳</td>
-<td><a href="https://chenghouwen.com/" target="_blank">chenghouwen.com</a></td>
-</tr>
-<tr>
-<td>范儿</td>
-<td>深圳</td>
-<td><a href="http://imfer.me/" target="_blank">imfer.me</a></td>
-</tr>
-<tr>
-<td>大路</td>
-<td>深圳</td>
-<td><a href="http://www.hdgogogo.com/" target="_blank">www.hdgogogo.com</a></td>
-</tr>
-<tr>
-<td>JiaYin</td>
-<td>上海</td>
-<td><a href="http://imjiayin.com/" target="_blank">imjiayin.com</a></td>
-</tr>
-<tr>
-<td>Ray</td>
-<td>上海</td>
-<td><a href="http://www.misray.com/" target="_blank">www.misray.com</a></td>
-</tr>
-<tr>
-<td>第六天天使</td>
-<td>瑞典</td>
-<td><a href="http://blog.chenchenli.net" target="_blank">blog.chenchenli.net</a></td>
-</tr>
-<tr>
-<td>大鹏</td>
-<td>德国</td>
-<td><a href="http://dapengde.com/" target="_blank">dapengde.com</a></td>
-</tr>
-<tr>
-<td>马光</td>
-<td>比利时</td>
-<td width="209"><a href="http://maguang.net/" target="_blank">maguang.net</a></td>
-</tr>
-<tr>
-<td>坛子</td>
-<td>比利时</td>
-<td width="209"><a href="https://tumutanzi.com/" target="_blank">tumutanzi.com</a></td>
-</tr>
-<tr>
-<td>佐仔</td>
-<td>广州</td>
-<td width="209"><a href="http://jinbo123.com/" target="_blank">jinbo123.com</a></td>
-</tr>
-<tr>
-<td>忘想</td>
-<td>广州</td>
-<td><a href="https://chinr.net/" target="_blank">chinr.net</a></td>
-</tr>
-<tr>
-<td>阿钧</td>
-<td>广州</td>
-<td><a href="http://www.lushaojun.com/" target="_blank">www.lushaojun.com</a></td>
-</tr>
-<tr>
-<td>大肥羊</td>
-<td>肇庆</td>
-<td><a href="http://cyhour.com/" target="_blank">cyhour.com</a></td>
-</tr>
-<tr>
-<td>好玩</td>
-<td>福州</td>
-<td><a href="http://huangyunying.com/" target="_blank">huangyunying.com</a></td>
-</tr>
-<tr>
-<td>枫叶向风</td>
-<td>福州</td>
-<td><a href="http://blog.if404.com/" target="_blank">blog.if404.com</a></td>
-</tr>
-<tr>
-<td>烟雨</td>
-<td>昆明</td>
-<td><a href="http://blog.cctv.com.im" target="_blank">blog.cctv.com.im</a></td>
-</tr>
-<tr>
-<td>virus</td>
-<td>包头</td>
-<td><a href="http://viruschen.com/" target="_blank">viruschen.com</a></td>
-</tr>
-<tr>
-<td>Francis</td>
-<td>南京</td>
-<td><a href="http://fanxihui.com/" target="_blank">fanxihui.com</a></td>
-</tr>
-<tr>
-<td>牌巴子</td>
-<td>南京</td>
-<td><a href="http://www.sunyansong.com/" target="_blank">www.sunyansong.com</a></td>
-</tr>
-<tr>
-<td>DK</td>
-<td>成都</td>
-<td><a href="http://wdk.pw" target="_blank">wdk.pw</a></td>
-</tr>
-<tr>
-<td>松鼠男</td>
-<td>厦门</td>
-<td><a href="http://www.80-go.com/" target="_blank">www.80-go.com</a></td>
-</tr>
-<tr>
-<td>雨帆</td>
-<td>厦门</td>
-<td><a href="http://yufan.me/" target="_blank">yufan.me</a></td>
-</tr>
-<tr>
-<td>Fmwei</td>
-<td>南充</td>
-<td><a href="http://fmwei.com/" target="_blank">fmwei.com</a></td>
-</tr>
-<tr>
-<td>Huiris</td>
-<td>大连</td>
-<td><a href="http://huiris.com/" target="_blank">huiris.com</a></td>
-</tr>
-<tr>
-<td>希望</td>
-<td>温州</td>
-<td><a href="http://www.caibin.me/" target="_blank">www.caibin.me</a></td>
-</tr>
-<tr>
-<td>寨主</td>
-<td>温州</td>
-<td><a href="http://xin.im/" target="_blank">xin.im</a></td>
-</tr>
-<tr>
-<td>清寒</td>
-<td>四川</td>
-<td><a href="http://www.yaoranqu.com/" target="_blank">www.yaoranqu.com</a></td>
-</tr>
-<tr>
-<td>老罗</td>
-<td>四川</td>
-<td><a href="http://www.music4x.com/" target="_blank">www.music4x.com</a></td>
-</tr>
-<tr>
-<td>康员外</td>
-<td>宁波</td>
-<td><a href="http://blog.2-1603.com/" target="_blank">blog.2-1603.com</a></td>
-</tr>
-<tr>
-<td>逗号</td>
-<td>重庆</td>
-<td><a href="http://chenfm.com/" target="_blank">chenfm.com</a></td>
-</tr>
-</tbody>
-</table>
+ 
 </div>
