--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -9,13 +9,13 @@ layout: default
         {{ content }}
     </div>
     
-    <h1 class="about__title">My Friends:</h1>    
-
+    <h1 class="about__title">My Friends:</h1>
+<br>
 <table width="600" border="50" height="500">
 <tr>
     <td><a href="http://dlyang.me/" target="_blank">LanternD</a></td>
     <td><a href="http://www.lieking.com/" target="_blank">时光笔记</a></td>
-    <td><a href="https://www.ipz.me/" target="_blank">影乐</a></td><td>
+    <td><a href="https://www.ipz.me/" target="_blank">影乐</a></td>
     <td><a href="http://chenfm.com/" target="_blank">逗号</a></td>
 </tr>
 <tr>
