--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -69,7 +69,7 @@ layout: default
 <tr>
     <td><a href="http://imjiayin.com/" target="_blank">JiaYin</a></td>
     <td><a href="http://www.misray.com/" target="_blank">Ray</a></td>
-    <td><a href="http://blog.chenchenli.net" target="_blank">第六天天使</a></td>
+    <td><a href="http://blog.chenchenli.net" target="_blank">第六天使</a></td>
     <td><a href="http://yufan.me/" target="_blank">雨帆</a></td>
 </tr>
 <tr>
