--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,7 +7,7 @@
 body {
 	color: $color-black;
 	background: $color-white;
-	font-family: 'Fangsong','Inconsolata' ;
+	font-family: 'Inconsolata','Fangsong' ;
 	font-size: 100%;
 	font-weight: 400;
 }
