--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -84,6 +84,7 @@ layout: default
     <td><a href="http://jinbo123.com/" target="_blank">佐仔志</a></td>
     <td><a href="https://chinr.net/" target="_blank">拟月幻真</a></td>
     <td><a href="http://www.sunyansong.com/" target="_blank">知行博客</a></td>
+	<td><a href="http://iyest.com/" target="_blank">龙鹰</a></td>
 </tr>
 </table>
  
