--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="list">
     <a class="list__back" href="/">&lt;-- back</a>
-    <h1 class="list__title">网络服务:</h1>
+    <h1 class="list__title">My List:</h1>
     <div class="list__content">
         {{ content }}
     </div>    
