--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<div class="list">
-    <a class="list__back" href="/">&lt;-- back</a>
-    <h1 class="list__title">My List:</h1>
-    <div class="list__content">
+<div class="about">
+    <a class="about__back" href="/">&lt;-- back</a>
+    <h1 class="about__title">My List:</h1>
+    <div class="about__content">
         {{ content }}
     </div>    
 </div>
