--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 
     <link rel="icon" href="/assets/img/favicon.png">
     <link rel="stylesheet" 
-href="https://fonts.googleapis.com/css?family=Inconsolata:400,700">
+href="https://fonts.lug.ustc.edu.cn/css?family=Inconsolata:400,700">
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
 </head>
 
