--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -6,7 +6,7 @@ layout: default
     <a class="about__back" href="/">&lt;-- back</a>
     <h1 class="about__title">Notes:</h1>
 <br>
-<table width="400" border="50" height="60">
+<table width="400" border="50" height="">
 <tr>
     <td><a href="#" target="_blank">编程</a></td>
     <td><a href="#" target="_blank">建站</a></td>
@@ -17,7 +17,7 @@ layout: default
 <br>
     <h1 class="about__title">Excerpt:</h1>
 <br>
-<table width="400" border="50" height="60">
+<table width="400" border="50" height="">
 <tr>
     <td><a href="#" target="_blank">浪潮之巅</a></td>
     <td><a href="#" target="_blank">参与感</a></td>
