--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -11,6 +11,7 @@ layout: default
     <td><a href="#" target="_blank">编程</a></td>
     <td><a href="#" target="_blank">建站</a></td>
     <td><a href="#" target="_blank">英语</a></td>
+    <td><a href="#" target="_blank">英语</a></td>
 </tr>
 </table>
 <br>
