--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -8,10 +8,11 @@ layout: default
 <br>
 <table width="400" border="50" height="">
 <tr>
-    <td><a href="zeove.github.io/list/index.md" target="_blank">编程</a></td>
+    <td><a href="{{ list.url }}">编程</a></td>
     <td><a href="#" target="_blank">建站</a></td>
     <td><a href="#" target="_blank">英语</a></td>
     <td><a href="#" target="_blank">英语</a></td>
+
 </tr>
 </table>
 <br>
