--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -4,27 +4,8 @@ layout: default
 
 <div class="about">
     <a class="about__back" href="/">&lt;-- back</a>
-    <h1 class="about__title">Notes:</h1>
-<br>
-<table width="400" border="50" height="">
-<tr>
-    <td><a href="{{ list.url }}">编程</a></td>
-    <td><a href="#" target="_blank">建站</a></td>
-    <td><a href="#" target="_blank">英语</a></td>
-    <td><a href="#" target="_blank">英语</a></td>
-
-</tr>
-</table>
-<br>
-<br>
-    <h1 class="about__title">Excerpt:</h1>
-<br>
-<table width="400" border="50" height="">
-<tr>
-    <td><a href="#" target="_blank">浪潮之巅</a></td>
-    <td><a href="#" target="_blank">参与感</a></td>
-    <td><a href="#" target="_blank">万万没想到</a></td>
-</tr>
-</table>
- 
-</div>
+    <h1 class="about__title">My list:</h1>
+    <div class="about__content">
+        {{ content }}
+    </div>
+ </div>
