--- a/_layouts/favo.html
+++ b/_layouts/favo.html
@@ -5,7 +5,7 @@ layout: default
 <div class="about">
     <a class="about__back" href="/">&lt;-- back</a>
 
-    <div class="about__content">
+    <div class="favo__content">
         {{ content }}
     </div>
 </div>
