--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -238,3 +238,26 @@ ul {
 		}
 	}
 }
+
+.favo {
+	&__title {
+		font-size: 1.6em;
+		font-weight: 700;
+		margin-top: 20px;
+		margin-bottom: 10px;
+	}
+	&__content {
+		margin-top: 20px;
+		h1 {
+			font-size: 1.2em;
+			font-style: italic;
+			margin-top: 30px;
+			margin-bottom: 5px;
+		}
+		p {
+			font-size: 1em;
+			line-height: 100%;
+			margin-bottom: 10px;
+		}
+	}
+}
