--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -2,9 +2,19 @@
 layout: default
 ---
 
-<div class="about">
-    <a class="about__back" href="/">&lt;-- back</a>
-
+<div class="post">
+	<a class="about__back" href="/">&lt;-- back</a>
+    
+	
+	<div class="post__title">
+    	<h1>{{ page.title }}</h1>
+    </div>
+    <div class="post__date">
+    	<p>{{ page.date | date: '%B %-d, %Y' }}</p>
+    </div>
+    <div class="post__meta">
+    	<p>{{ tags_content }}</p>
+    </div>
     <div class="post__content"?>
         {{ content }}
     </div>
