--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -2,20 +2,10 @@
 layout: default
 ---
 
-<div class="note">
-	<a class="about__back" href="/">&lt;-- back</a>
-    
-	
-	<div class="note__title">
-    	<h1>{{ page.title }}</h1>
-    </div>
-    <div class="note__date">
-    	<p>{{ page.date | date: '%B %-d, %Y' }}</p>
-    </div>
-    <div class="note__meta">
-    	<p>{{ tags_content }}</p>
-    </div>
-    <div class="note__content"?>
+<div class="about">
+    <a class="about__back" href="/notes">&lt;-- back</a>
+
+    <div class="post__content"?>
         {{ content }}
     </div>
 </div>
