--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -55,6 +55,9 @@ layout: default
     <td><a href="http://imjiayin.com/" target="_blank">JiaYin</a></td>
     <td><a href="http://www.misray.com/" target="_blank">Misray</a></td>
 </tr>
+<tr>
+    <td><a href="http://www.munanzi.com/" target="_blank">仰望星空</a></td>
+</tr>
 </table>
  
 </div>
