--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -33,6 +33,8 @@ layout: default
 </tr>
 <tr>
     <td><a href="http://iyest.com/" target="_blank">龙鹰</a></td>
+	<td><a href="http://www.wangyikai.com/" target="_blank">王宜楷</a></td>
+	<td><a href="https://hao.mhcf.net/" target="_blank">梦幻辰风</a></td>
 </tr>
 </table>
  
