--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -34,7 +34,7 @@ layout: default
 <tr>
     <td><a href="http://iyest.com/" target="_blank">龙鹰</a></td>
 	<td><a href="http://www.wangyikai.com/" target="_blank">王宜楷</a></td>
-	<td><a href="https://hao.mhcf.net/" target="_blank">梦幻辰风</a></td>
+	<td><a href="https://hao.mhcf.net/" target="_blank">博客小屋</a></td>
 </tr>
 </table>
  
