--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,18 @@ href="https://fonts.lug.ustc.edu.cn/css?family=Inconsolata:400,700">
         {{ content }}
     </div>
 
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-25116838-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-25116838-1');
+</script>
+
+	
 </body>
 
 </html>
