--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -35,6 +35,7 @@ layout: default
     <td><a href="http://iyest.com/" target="_blank">龙鹰</a></td>
 	<td><a href="http://www.wangyikai.com/" target="_blank">王宜楷</a></td>
 	<td><a href="https://hao.mhcf.net/" target="_blank">博客小屋</a></td>
+	<td><a href="http://penpenguanguan.com/" target="_blank">盆盆罐罐</a></td>
 </tr>
 </table>
  
