--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -31,9 +31,9 @@ layout: default
     <td><a href="http://blog.exbye.com/" target="_blank">浮茗诗舍</a></td>
 </tr>
 <tr>
-    <td><a href="http://iyest.com/" target="_blank">龙鹰</a></td>
+    <td><a href="http://iyest.com/blog/" target="_blank">龙鹰</a></td>
 	<td><a href="http://www.wangyikai.com/" target="_blank">王宜楷</a></td>
-	<td><a href="https://hao.mhcf.net/" target="_blank">博客小屋</a></td>
+	<td><a href="http://yelook.com/" target="_blank">有野出没</a></td>
 	<td><a href="http://penpenguanguan.com/" target="_blank">盆盆罐罐</a></td>
 </tr>
 </table>
