--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -33,7 +33,7 @@ layout: default
 <tr>
     <td><a href="http://iyest.com/blog/" target="_blank">龙鹰</a></td>
 	<td><a href="http://www.wangyikai.com/" target="_blank">王宜楷</a></td>
-	<td><a href="http://yelook.com/" target="_blank">有野出没</a></td>
+	<td><a href="https://chidd.net" target="_blank">伪医生律师</a></td>
 	<td><a href="http://penpenguanguan.com/" target="_blank">盆盆罐罐</a></td>
 </tr>
 </table>
