--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -36,6 +36,12 @@ layout: default
 	<td><a href="https://chidd.net" target="_blank">伪医生律师</a></td>
 	<td><a href="http://penpenguanguan.com/" target="_blank">盆盆罐罐</a></td>
 </tr>
+<tr>
+    <td><a href="https://tumutanzi.com" target="_blank">土木坛子</a></td>
+	<td><a href="https://chenghouwen.com/" target="_blank">程厚文</a></td>
+	<td><a href="https://www.ithmz.com/" target="_blank">从良未遂</a></td>
+	<td><a href="https://www.lushaojun.com" target="_blank">随忘淡思</a></td>
+</tr>
 </table>
  
 </div>
