--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -42,6 +42,9 @@ layout: default
 	<td><a href="https://www.ithmz.com/" target="_blank">从良未遂</a></td>
 	<td><a href="https://www.lushaojun.com" target="_blank">随忘淡思</a></td>
 </tr>
+<tr>
+    <td><a href="http://imzm.im/" target="_blank">陈仓颉</a></td>
+</tr>
 </table>
  
 </div>
