--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -44,6 +44,9 @@ layout: default
 </tr>
 <tr>
     <td><a href="http://imzm.im/" target="_blank">陈仓颉</a></td>
+	<td><a href="http://www.munanzi.com/" target="_blank">牧南子</a></td>
+	<td><a href="http://dapengde.com/" target="_blank">大鹏志</a></td>
+	<td><a href="http://fangshi.org/" target="_blank">方室网志</a></td>
 </tr>
 </table>
  
