--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -40,7 +40,7 @@ layout: default
     <td><a href="https://tumutanzi.com" target="_blank">土木坛子</a></td>
 	<td><a href="https://chenghouwen.com/" target="_blank">程厚文</a></td>
 	<td><a href="https://www.ithmz.com/" target="_blank">从良未遂</a></td>
-	<td><a href="https://www.lushaojun.com" target="_blank">随忘淡思</a></td>
+	<td><a href="http://ningqun.shdot.com/" target="_blank">浮白载笔</a></td>
 </tr>
 <tr>
     <td><a href="http://imzm.im/" target="_blank">陈仓颉</a></td>
