--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -21,7 +21,7 @@ layout: default
 <tr>
     <td><a href="http://houye.xyz/" target="_blank">侯爷</a></td>
 	<td><a href="http://maguang.net/" target="_blank">半省堂</a></td>
-    <td><a href="http://www.munanzi.com/" target="_blank">仰望星空</a></td>
+    <td><a href="https://www.mhcf.net/" target="_blank">梦幻辰风</a></td>
     <td><a href="https://chinr.net/" target="_blank">拟月幻真</a></td>
 </tr>
 <tr>
