--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -11,7 +11,7 @@ layout: default
 <br>
     <h1 class="about__title">My Friends:</h1>
 <br>
-<table width="400" border="25" height="170">
+<table width="400" border="25" height="180">
 <tr>
     <td><a href="http://iyest.com/blog/" target="_blank">龙鹰</a></td>
 	<td><a href="http://jinbo123.com/" target="_blank">佐仔志</a></td>    
@@ -46,6 +46,9 @@ layout: default
     <td><a href="https://chenghouwen.com/" target="_blank">程厚文</a></td>
     <td><a href="http://imzm.im/" target="_blank">陈仓颉</a></td>	
 	<td><a href="http://fangshi.org/" target="_blank">方室网志</a></td>
+	<td><a href="https://elizen.me/" target="_blank">斯文敗類</a></td>
+</tr>
+<tr>
 	<td><a href="https://chidd.net" target="_blank">伪医生律师</a></td>
 </tr>
 </table>
