--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -49,7 +49,7 @@ layout: default
 	<td><a href="https://elizen.me/" target="_blank">斯文敗類</a></td>
 </tr>
 <tr>
-	<td><a href="https://chidd.net" target="_blank">伪医生律师</a></td>
+	<td><a href="https://chidd.net" target="_blank">陈大猫</a></td>
 </tr>
 </table>
  
