--- a/_layouts/mark.html
+++ b/_layouts/mark.html
@@ -5,7 +5,7 @@ layout: default
 <div class="about">
     <a class="about__back" href="/">&lt;-- back</a>
 
-    <div class="post__content"?>
+    <div class="post__content">
         {{ content }}
     </div>
 </div>
