--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="about">
-    <a class="about__back" href="/mark">&lt;-- back</a>
+    <a class="about__back" href="/notes">&lt;-- back</a>
 
     <div class="post__content"?>
         {{ content }}
