--- a/_layouts/deal.html
+++ b/_layouts/deal.html
@@ -8,4 +8,5 @@ layout: default
     <div class="about__content">
         {{ content }}
     </div>
+<script src="//fancy.com/widget/widget.js?type=category&category=Gadgets&ref=nyq&username=nyq&cols=4&rows=10&size=m&topbar=white&anywhere" async></script>
 </div>
