--- a/_layouts/music.html
+++ b/_layouts/music.html
@@ -8,5 +8,5 @@ layout: default
     <div class="about__content">
         {{ content }}
     </div>
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="100%" height=450 src="//music.163.com/outchain/player?type=0&id=1030399&auto=1&height=430"></iframe>
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="100%" height=450 src="//cyixlq.gitee.io/iframe/#/netease/1030399/true"></iframe>
 </div>
