--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -13,7 +13,7 @@ layout: default
 <br>
 <table width="400" border="25" height="180">
 <tr>
-    <td><a href="http://iyest.com/blog/" target="_blank">龙鹰</a></td>
+    <td><a href="http://iyest.com/" target="_blank">龙鹰</a></td>
 	<td><a href="http://jinbo123.com/" target="_blank">佐仔志</a></td>    
     <td><a href="http://www.lieking.com/" target="_blank">时光笔记</a></td>    
     <td><a href="http://www.lushaojun.com/" target="_blank">随望淡思</a></td>
