--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,9 @@
     <link rel="stylesheet" 
 href="https://fonts.lug.ustc.edu.cn/css?family=Inconsolata:400,700">
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+	
+	<script data-ad-client="ca-pub-6511393025512237" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	
 </head>
 
 <body>
