--- a/_layouts/notes.html
+++ b/_layouts/notes.html
@@ -6,6 +6,7 @@ layout: default
     <a class="about__back" href="/">&lt;-- back</a>
 	
     <div class="about__content">
+	<a target="_blank" href="https://www.amazon.cn/b/ref=as_li_ss_tl?_encoding=UTF8&camp=536&creative=3132&linkCode=ur2&node=1976128071&pf_rd_i=116169071&pf_rd_m=A1AJ19PSB66TGU&pf_rd_p=0900efd1-90dd-4887-8170-d6bac3907475&pf_rd_p=0900efd1-90dd-4887-8170-d6bac3907475&pf_rd_r=6R5EWNNY81M3JFFF2V9H&pf_rd_r=6R5EWNNY81M3JFFF2V9H&pf_rd_s=merchandised-search-leftnav&pf_rd_t=101&tag=zeove01-23">彼时当年少，正是读书时 - Kindle优选书单</a><img src="https://ir-cn.amazon-adsystem.com/e/ir?t=zeove01-23&l=ur2&o=28" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /><br>
         {{ content }}
     </div>
 </div>
